src/objects/SFDC_Plan_Resource_Association__c.object
<CustomObject>
    <description>Assigns specific resources to a channel plan. Align resources with objectives, and provide a clear picture to partners of who their channel support team is.</description>
    <fields>
        <fullName>Channel_Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Plan</label>
        <referenceTo>SFDC_Channel_Account_Plan__c</referenceTo>
        <relationshipName>R00N6A00000DLyZ2UAL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Team</relationshipLabel>
        <relationshipName>R00N6A00000DLyYlUAL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Restocking</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Shipments</fullName>
                </value>
                <value>
                    <fullName>Trainer</fullName>
                </value>
                <value>
                    <fullName>Channel Manager</fullName>
                </value>
                <value>
                    <fullName>Channel Sales Rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Channel Team</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Channel Team Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>